src/main/metadata/objects/EP_Export_Notification__c.object
<CustomObject>
    <fields>
        <fullName>AddInfo1__c</fullName>
        <label>Additional Info1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddInfo2__c</fullName>
        <label>Additional Info2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddInfo3__c</fullName>
        <label>Additional Info3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_EP_Transaction__c</fullName>
        <label>Created By EP Transaction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <label>Market Discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_object_id__c</fullName>
        <description>Stored SFDC Record ID for export</description>
        <label>SFDC Record ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Store Object Name</description>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_By_EP_Transaction__c</fullName>
        <label>Updated By EP Transaction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_By_EP_Transactions__c</fullName>
        <label>Updated By EP Transaction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usecase__c</fullName>
        <description>Store Usecase</description>
        <label>Usecase</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>EP Export Notification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EP-{0000000000}</displayFormat>
        <label>EP Export Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EP Export Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>